--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,16 @@
+/*** Includes ***/
+@import "includes/normalize";
+
+/*** Mixins ***/
+@import "mixins/mixins";
+
+/*** Framr ***/
+@import "global/variables";
+@import "global/fonts";
+@import "global/global";
+@import "global/prefix";
+@import "global/grid";
+@import "global/helpers";
+
+/*** Components ***/
 @import "components/default";
